# computer-club

./: CMakeLists.txt  README.md  main.cpp  run-example.sh
src/: EventHandler.h  Events.h  ParseHelpers.cpp  Time.cpp  Time.h  main.cpp
src/event/: EventHandler.cpp  EventHandler.h  Events.h  PrintHandler.cpp  PrintHandler.h
src/model/: ClientStatus.h  ComputerClub.cpp  ComputerClub.h  HelperModels.h  Table.cpp  Table.h  Time.cpp  Time.h
src/parsing/: ParseHelpers.cpp  ParseHelpers.h
test/: CMakeLists.txt  ClubTest.cpp
